--- a/frontend/src/pages/Home/carousel.module.scss
+++ b/frontend/src/pages/Home/carousel.module.scss
@@ -13,7 +13,9 @@
   @include full-width-and-height;
 }
 
-.iconCarousel {
+.iconSlider {
+  @include reset-button;
+
   color: theme.$primary-color;
   cursor: pointer;
 }
@@ -28,7 +30,7 @@
   inset: 0;
   pointer-events: none;
   content: "";
-  border: 50px solid #fff;
+  border: 60px solid #fff;
 }
 
 .videoWrapper {
