--- a/frontend/src/styles/helpers/_mixins.scss
+++ b/frontend/src/styles/helpers/_mixins.scss
@@ -30,26 +30,6 @@
   text-align: center;
 }
 
-@mixin product-card-description {
-  margin-bottom: 10px;
-  font-size: 0.875rem;
-  color: theme.$secondary-color;
-}
-
-@mixin product-card-size-and-price {
-  margin: 0;
-  font-family: theme.$main-font-family;
-  font-size: 1.25rem;
-  font-weight: 500;
-  color: theme.$secondary-color;
-}
-
-@mixin product-image {
-  max-width: 80%;
-  height: 200px;
-  margin: 16px 0;
-}
-
 @mixin product-cart-purshase-button {
   position: relative;
   box-sizing: border-box;
@@ -80,4 +60,17 @@
   background: none;
   border: none;
   outline: none;
+}
+
+@mixin reset-button {
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  background: none;
+  border: none;
+  outline: none;
+
+  &:focus {
+    outline: none;
+  }
 }
